terraform/deployments/cluster-services/modules/gatekeeper/resources/constraints/deny_default_namespace.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyDefaultNamespace
metadata:
  name: deny-default-namespace
spec:
  match:
    scope: Namespaced
    namespaces:
      - default
