terraform/deployments/cluster-services/modules/gatekeeper/resources/constraints/immutable_configmap.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sImmutableConfigMap
metadata:
  name: immutable-configmap
spec:
  match:
    kinds:
      - kinds: ["ConfigMap"]
  parameters:
    allowedGroups: ["platformengineer"]
